[UI] Adds sublime project, new logos and Typekit.
Removes explicit GoSquared tracking code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
         <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
+        <!-- SCRIPTS -->
+        <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         <!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
         <![endif]-->
@@ -42,26 +46,25 @@
             <hr>
 
             <div class="jumbotron">
-                <img src="images/logo-mark.png" alt="Red Sequence" />
-                <p class="lead">
+                <img src="images/logo-320x320.png" width="180" height="180" alt="Red Sequence" />
+                <h1>
                     Cloud productivity apps for individuals and teams.
-                </p>
-                <a class="btn btn-small btn-success" href="contact.html">Contact us</a>
+                </h1>
             </div>
 
             <hr>
 
             <div class="row-fluid">
                 <div class="span6">
-                    <h4>Timestamp</h4>
+                    <h2>Timestamp</h2>
                     <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
                     <p>
-                        Time tracking doesn't have to be time consuming. Timestamp is designed to minimize effort by providing an elegant and intuitive user centric design and simple natural language input method. Win back your time.
+                        Time tracking doesn't have to be time consuming. Timestamp is designed to minimize user effort, by providing simple, intuitive natural language input. Win back your time.
                     </p>
                 </div>
 
                 <div class="span6">
-                    <h4>HelixJS</h4>
+                    <h2>HelixJS</h2>
                     <div class="logo-box"><a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS" /></a></div>
                     <p>DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout and provides a complete foundation for architecting web apps.</p>
                 </div>
@@ -69,7 +72,7 @@
 
             <div class="row-fluid consultancy">
                 <div class="span12">
-                    <h4>Microsoft BizSpark</h4>
+                    <h2>Microsoft BizSpark</h2>
                     <p>
                         Red Sequence are members of the Microsoft BizSpark Program. Our profile can be found <a href="http://www.microsoft.com/bizspark/ConnectProfile.aspx?Startup=216891">here</a>.
                     </p>
@@ -78,7 +81,7 @@
 
             <div class="row-fluid consultancy">
                 <div class="span12">
-                    <h4>Consultancy</h4>
+                    <h2>Consultancy</h2>
                     <p>
                         Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
                         JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in Node.js, .NET and Windows Azure.
@@ -143,25 +146,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- SCRIPTS -->
-            <script type="text/javascript">
-                var GoSquared = {};
-                GoSquared.acct = "GSN-422629-R";
-                (function(w){
-                  function gs(){
-                    w._gstc_lt = +new Date;
-                    var d = document, g = d.createElement("script");
-                    g.type = "text/javascript";
-                    g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
-                    var s = d.getElementsByTagName("script")[0];
-                    s.parentNode.insertBefore(g, s);
-                  }
-                  w.addEventListener ?
-                    w.addEventListener("load", gs, false) :
-                    w.attachEvent("onload", gs);
-                })(window);
-            </script>
         </div>
     </body>
 </html>
