[Chore] Missing Typekit from Contact page

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,10 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
         <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
+        <!-- SCRIPTS -->
+        <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         <!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
         <![endif]-->
