[Copy] Replaces BizSpark with MS Partner

--- a/contact.html
+++ b/contact.html
@@ -109,11 +109,11 @@
             <div class="footer">
                 <div class="row-fluid">
                     <div class="span10">
-                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
+                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
                     </div>
 
                     <div class="span2">
-                        <a href="http://www.microsoft.com/bizspark/ConnectProfile.aspx?Startup=216891"><img src="images/bizspark-startup.png" alt="Microsoft BizSpark" /></a>
+                        <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061"><img src="images/microsoft-partner.png" alt="Microsoft Partner" /></a>
                     </div>
                 </div>
             </div>
