[Chore] Badly formatted HTML

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="footer">
                 <div class="row-fluid">
                     <div class="span10">
-                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632./p>
+                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
                     </div>
 
                     <div class="span2">
