--- a/index.html
+++ b/index.html
@@ -70,17 +70,15 @@
                 </div>
             </div>
 
-            <div class="row-fluid consultancy">
-                <div class="span12">
-                    <h2>Microsoft Partners</h2>
+            <div class="row-fluid">
+                <div class="span6">
+                    <h2>Microsoft Partner</h2>
                     <p>
-                        Our Microsoft Pinpoint profile can be found <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061">here</a>.
+                        View our Microsoft Pinpoint profile <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061">here</a>.
                     </p>
                 </div>
-            </div>
 
-            <div class="row-fluid consultancy">
-                <div class="span12">
+                <div class="span6">
                     <h2>Consultancy</h2>
                     <p>
                         Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
