[Copy] Updates phone number

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                             <tr>
                                 <td><i class="icon-large icon-phone"></i></td>
                                 <td>Phone</td>
-                                <td><a href="tel:+442392984010">02392 984010</a></td>
+                                <td><a href="tel:+442392160845">+44 (0) 2392 160845</a></td>
                             </tr>
                             <tr>
                                 <td><i class="icon-large icon-linkedin"></i></td>
