[SEO] Google+ link added back

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="footer">
                 <div class="row-fluid">
                     <div class="span10">
-                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
+                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
                     </div>
 
                     <div class="span2">
