[SEO] Updates Google+ URL

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                             <tr>
                                 <td><i class="icon-large icon-google-plus"></i></td>
                                 <td>Google+</td>
-                                <td><a href="https://plus.google.com/113094273748984692455" rel="publisher">redsequence</a></td>
+                                <td><a href="https://plus.google.com/+RedSequence" rel="publisher">+RedSequence</a></td>
                             </tr>
                             <tr>
                                 <td><i class="icon-large icon-facebook"></i></td>
