[Chore] Updated links to Timestamp.io

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="row-fluid">
                 <div class="span6">
                     <h2>Timestamp</h2>
-                    <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
+                    <div class="logo-box"><a href="https://www.timestamp.io"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
                     <p>
-                        Time tracking doesn't have to be time consuming. Timestamp is designed to minimize user effort, by providing simple, intuitive natural language input. Win back your time.
+                        Real-time project tracking for you and your clients. One click project tracking that you can act upon, and your clients will love.
                     </p>
                 </div>
 
