[Chore] Update contact information and logos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="jumbotron">
                 <img src="images/logo-320x320.png" width="180" height="180" alt="Red Sequence" />
                 <h1>
-                    Cloud productivity apps for individuals and teams.
+                    Cloud productivity apps for teams.
                 </h1>
             </div>
 
@@ -59,14 +59,14 @@
                     <h2>Timestamp</h2>
                     <div class="logo-box"><a href="https://www.timestamp.io"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
                     <p>
-                        Real-time project tracking for you and your clients. One click project tracking that you can act upon, and your clients will love.
+                        Real-time project tracking for you and your clients. Easy cost, revenue and profitability analysis.
                     </p>
                 </div>
 
                 <div class="span6">
                     <h2>HelixJS</h2>
                     <div class="logo-box"><a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS" /></a></div>
-                    <p>DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout and provides a complete foundation for architecting web apps.</p>
+                    <p>DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout to provide a foundation for architecting web apps.</p>
                 </div>
             </div>
 
@@ -74,8 +74,7 @@
                 <div class="span12">
                     <h2>Consultancy</h2>
                     <p>
-                        Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
-                        JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in Node.js, .NET and Windows Azure.
+                        Red Sequence specialise in HTML5, client-side JavaScript technologies (jQuery, Knockout, AngularJS, Vue.js, React/Redux). On the server-side we specialise in .NET and Microsoft Azure.
                     </p>
                     <p>
                         If you're looking for help or advice on the technologies mentioned then feel free to <a href="contact.html">get in touch</a>!
@@ -96,7 +95,7 @@
                     </div>
 
                     <div class="span3">
-                        <a href="http://knockoutjs.com"><img src="images/knockout.png" alt="Knockout" /></a>
+                        <a href="https://vuejs.org"><img src="images/vuejs.png" alt="Vue.js" /></a>
                     </div>
 
                     <div class="span3">
@@ -118,7 +117,7 @@
                     </div>
 
                     <div class="span3">
-                        <a href="http://www.windowsazure.com"><img src="images/windowsazure.png" alt="Windows Azure" /></a>
+                        <a href="http://www.azure.com"><img src="images/microsoftazure.png" alt="Microsoft Azure" /></a>
                     </div>
                 </div>
             </div>
