[html] Remove html5shiv.js

--- a/index.html
+++ b/index.html
@@ -1,140 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Michael Taylor">
-        <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
-        <meta name="msapplication-TileColor" content="#FFF">
-        <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Michael Taylor" />
+    <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
+    <meta name="msapplication-TileColor" content="#FFF" />
+    <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png" />
 
-        <!-- ICONS -->
-        <link rel="icon" type="image/png" href="icons/favicon.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png">
+    <!-- ICONS -->
+    <link rel="icon" type="image/png" href="icons/favicon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png" />
 
-        <title>Red Sequence - Cloud productivity apps for individuals and teams</title>
+    <title>Red Sequence - Cloud productivity apps for individuals and teams</title>
 
-        <!-- STYLES -->
-        <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
-        <link rel="stylesheet" media="screen" href="styles/site.css">
-        <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
-        <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
+    <!-- STYLES -->
+    <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" media="screen" href="styles/site.css" />
+    <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css" />
 
-        <!-- SCRIPTS -->
-        <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <!-- SCRIPTS -->
+    <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
+    <script type="text/javascript">
+      try {
+        Typekit.load();
+      } catch (e) {}
+    </script>
+  </head>
+  <body>
+    <div class="container-narrow">
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <img src="images/redsequence.png" alt="Red Sequence" />
+      </div>
 
-        <!--[if lt IE 9]>
-        <script src="scripts/html5shiv.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <div class="container-narrow">
+      <hr />
 
-            <div class="masthead">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <img src="images/redsequence.png" alt="Red Sequence" />
-            </div>
+      <div class="jumbotron">
+        <img src="images/logo-320x320.png" width="180" height="180" alt="Red Sequence" />
+        <h1>
+          Cloud productivity apps for teams.
+        </h1>
+      </div>
 
-            <hr>
+      <hr />
 
-            <div class="jumbotron">
-                <img src="images/logo-320x320.png" width="180" height="180" alt="Red Sequence" />
-                <h1>
-                    Cloud productivity apps for teams.
-                </h1>
-            </div>
-
-            <hr>
-
-            <div class="row-fluid">
-                <div class="span6">
-                    <h2>Timestamp</h2>
-                    <div class="logo-box"><a href="https://www.timestamp.io"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
-                    <p>
-                        Real-time project tracking for you and your clients. Easy cost, revenue and profitability analysis.
-                    </p>
-                </div>
-
-                <div class="span6">
-                    <h2>HelixJS</h2>
-                    <div class="logo-box"><a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS" /></a></div>
-                    <p>DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout to provide a foundation for architecting web apps.</p>
-                </div>
-            </div>
-
-            <div class="row-fluid consultancy">
-                <div class="span12">
-                    <h2>Consultancy</h2>
-                    <p>
-                        Red Sequence specialise in HTML5, client-side JavaScript technologies (jQuery, Knockout, AngularJS, Vue.js, React/Redux). On the server-side we specialise in .NET and Microsoft Azure.
-                    </p>
-                    <p>
-                        If you're looking for help or advice on the technologies mentioned then feel free to <a href="contact.html">get in touch</a>!
-                    </p>
-                </div>
-            </div>
-
-            <div class="hero-unit javascript-logos">
-                <div class="row-fluid">
-                    <div class="span3">
-                        <a href="http://www.w3.org/html/logo/">
-                            <img src="images/html5-badge-h-connectivity-css3-performance-semantics-storage.png" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
-                        </a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="http://jquery.com"><img src="images/jquery.png" alt="jQuery" /></a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="https://vuejs.org"><img src="images/vuejs.png" alt="Vue.js" /></a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="http://angularjs.org"><img src="images/angularjs.png" alt="AngularJS" /></a>
-                    </div>
-                </div>
-
-                <div class="row-fluid">
-                    <div class="span3">
-                        <a href="http://www.helixjs.org"><img src="images/helixjs-small.png" alt="HelixJS" /></a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET" /></a>
-                    </div>
-
-                    <div class="span3">
-                        <a href="http://www.azure.com"><img src="images/microsoftazure.png" alt="Microsoft Azure" /></a>
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="footer">
-                <div class="row-fluid">
-                    <div class="span10">
-                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/+RedSequence" rel="publisher">Google+</a></p>
-                    </div>
-
-                    <div class="span2">
-                        <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061"><img src="images/microsoft-partner.png" alt="Microsoft Partner" /></a>
-                    </div>
-                </div>
-            </div>
+      <div class="row-fluid">
+        <div class="span6">
+          <h2>Timestamp</h2>
+          <div class="logo-box">
+            <a href="https://www.timestamp.io"><img src="images/timestamp.png" alt="Timestamp"/></a>
+          </div>
+          <p>
+            Real-time project tracking for you and your clients. Easy cost, revenue and profitability analysis.
+          </p>
         </div>
-    </body>
+
+        <div class="span6">
+          <h2>HelixJS</h2>
+          <div class="logo-box">
+            <a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS"/></a>
+          </div>
+          <p>
+            DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout to provide a
+            foundation for architecting web apps.
+          </p>
+        </div>
+      </div>
+
+      <div class="row-fluid consultancy">
+        <div class="span12">
+          <h2>Consultancy</h2>
+          <p>
+            Red Sequence specialise in HTML5, client-side JavaScript technologies (jQuery, Knockout, AngularJS, Vue.js,
+            React/Redux). On the server-side we specialise in .NET and Microsoft Azure.
+          </p>
+          <p>
+            If you're looking for help or advice on the technologies mentioned then feel free to
+            <a href="contact.html">get in touch</a>!
+          </p>
+        </div>
+      </div>
+
+      <div class="hero-unit javascript-logos">
+        <div class="row-fluid">
+          <div class="span3">
+            <a href="http://www.w3.org/html/logo/">
+              <img
+                src="images/html5-badge-h-connectivity-css3-performance-semantics-storage.png"
+                alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage"
+                title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage"
+              />
+            </a>
+          </div>
+
+          <div class="span3">
+            <a href="http://jquery.com"><img src="images/jquery.png" alt="jQuery"/></a>
+          </div>
+
+          <div class="span3">
+            <a href="https://vuejs.org"><img src="images/vuejs.png" alt="Vue.js"/></a>
+          </div>
+
+          <div class="span3">
+            <a href="http://angularjs.org"><img src="images/angularjs.png" alt="AngularJS"/></a>
+          </div>
+        </div>
+
+        <div class="row-fluid">
+          <div class="span3">
+            <a href="http://www.helixjs.org"><img src="images/helixjs-small.png" alt="HelixJS"/></a>
+          </div>
+
+          <div class="span3">
+            <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js"/></a>
+          </div>
+
+          <div class="span3">
+            <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET"/></a>
+          </div>
+
+          <div class="span3">
+            <a href="http://www.azure.com"><img src="images/microsoftazure.png" alt="Microsoft Azure"/></a>
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="footer">
+        <div class="row-fluid">
+          <div class="span10">
+            <p>
+              &copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.
+              <a href="https://plus.google.com/+RedSequence" rel="publisher">Google+</a>
+            </p>
+          </div>
+
+          <div class="span2">
+            <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061">
+              <img src="images/microsoft-partner.png" alt="Microsoft Partner" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
