[footer] Remove Google+ and Microsoft Partner links as they are no longer valid

--- a/index.html
+++ b/index.html
@@ -138,17 +138,10 @@
 
       <div class="footer">
         <div class="row-fluid">
-          <div class="span10">
+          <div class="span12">
             <p>
-              &copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.
-              <a href="https://plus.google.com/+RedSequence" rel="publisher">Google+</a>
+              &copy; Red Sequence Ltd. Registered in England. Company number 8550632.
             </p>
-          </div>
-
-          <div class="span2">
-            <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061">
-              <img src="images/microsoft-partner.png" alt="Microsoft Partner" />
-            </a>
           </div>
         </div>
       </div>
