[contact] Remove Google+ from contatc page

--- a/contact.html
+++ b/contact.html
@@ -1,106 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Michael Taylor">
-        <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
-        <meta name="msapplication-TileColor" content="#FFF">
-        <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Michael Taylor" />
+    <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
+    <meta name="msapplication-TileColor" content="#FFF" />
+    <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png" />
 
-        <!-- ICONS -->
-        <link rel="icon" type="image/png" href="icons/favicon.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png">
+    <!-- ICONS -->
+    <link rel="icon" type="image/png" href="icons/favicon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png" />
 
-        <title>Red Sequence - Contact us</title>
+    <title>Red Sequence - Contact us</title>
 
-        <!-- STYLES -->
-        <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
-        <link rel="stylesheet" media="screen" href="styles/site.css">
-        <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
-        <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
+    <!-- STYLES -->
+    <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" media="screen" href="styles/site.css" />
+    <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css" />
 
-        <!-- SCRIPTS -->
-        <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <!-- SCRIPTS -->
+    <script type="text/javascript" src="//use.typekit.net/rpi0bsa.js"></script>
+    <script type="text/javascript">
+      try {
+        Typekit.load();
+      } catch (e) {}
+    </script>
 
-        <!--[if lt IE 9]>
-        <script src="scripts/html5shiv.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <div class="container-narrow">
+    <!--[if lt IE 9]>
+      <script src="scripts/html5shiv.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container-narrow">
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="#">Contact</a></li>
+        </ul>
+        <img src="images/redsequence.png" alt="Red Sequence" />
+      </div>
 
-            <div class="masthead">
-                <ul class="nav nav-pills pull-right">
-                    <li><a href="/">Home</a></li>
-                    <li class="active"><a href="#">Contact</a></li>
-                </ul>
-                <img src="images/redsequence.png" alt="Red Sequence" />
-            </div>
+      <hr />
 
-            <hr>
-
-            <div class="row-fluid marketing">
-                <div class="span10">
-                    <h2>Contact details</h2>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td class="logo-column"><i class="icon-large icon-envelope-alt"></i></td>
-                                <td class="text-column">Email</td>
-                                <td><a href="mailto:info@redsequence.com">info@redsequence.com</a></td>
-                            </tr>
-                            <tr>
-                                <td><i class="icon-large icon-linkedin"></i></td>
-                                <td>LinkedIn</td>
-                                <td><a href="http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
-                            </tr>
-                            <tr>
-                                <td><i class="icon-large icon-twitter"></i></td>
-                                <td>Twitter</td>
-                                <td><a href="http://twitter.com/redsequence">@redsequence</a></td>
-                            </tr>
-                            <tr>
-                                <td><i class="icon-large icon-google-plus"></i></td>
-                                <td>Google+</td>
-                                <td><a href="https://plus.google.com/+RedSequence" rel="publisher">+RedSequence</a></td>
-                            </tr>
-                            <tr>
-                                <td><i class="icon-large icon-facebook"></i></td>
-                                <td>Facebook</td>
-                                <td><a href="http://facebook.com/redsequence">redsequence</a></td>
-                            </tr>
-                            <tr>
-                                <td><i class="icon-large icon-github-sign"></i></td>
-                                <td>GitHub</td>
-                                <td><a href="https://github.com/redsequence">redsequence</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="footer">
-                <div class="row-fluid">
-                    <div class="span10">
-                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
-                    </div>
-
-                    <div class="span2">
-                        <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061"><img src="images/microsoft-partner.png" alt="Microsoft Partner" /></a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SCRIPTS -->
-            <script src="scripts/bootstrap.min.js"></script>
+      <div class="row-fluid marketing">
+        <div class="span10">
+          <h2>Contact details</h2>
+          <table>
+            <tbody>
+              <tr>
+                <td class="logo-column"><i class="icon-large icon-envelope-alt"></i></td>
+                <td class="text-column">Email</td>
+                <td><a href="mailto:info@redsequence.com">info@redsequence.com</a></td>
+              </tr>
+              <tr>
+                <td><i class="icon-large icon-linkedin"></i></td>
+                <td>LinkedIn</td>
+                <td><a href="http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
+              </tr>
+              <tr>
+                <td><i class="icon-large icon-twitter"></i></td>
+                <td>Twitter</td>
+                <td><a href="http://twitter.com/redsequence">@redsequence</a></td>
+              </tr>
+              <tr>
+                <td><i class="icon-large icon-facebook"></i></td>
+                <td>Facebook</td>
+                <td><a href="http://facebook.com/redsequence">redsequence</a></td>
+              </tr>
+              <tr>
+                <td><i class="icon-large icon-github-sign"></i></td>
+                <td>GitHub</td>
+                <td><a href="https://github.com/redsequence">redsequence</a></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-    </body>
+      </div>
+
+      <hr />
+
+      <div class="footer">
+        <div class="row-fluid">
+          <div class="span10">
+            <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
+          </div>
+
+          <div class="span2">
+            <a href="http://pinpoint.microsoft.com/en-GB/partners/Red-Sequence-4299023061"
+              ><img src="images/microsoft-partner.png" alt="Microsoft Partner"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- SCRIPTS -->
+      <script src="scripts/bootstrap.min.js"></script>
+    </div>
+  </body>
 </html>
